[gd_scene load_steps=2 format=3 uid="uid://d2enyga3f20ol"]

[ext_resource type="Script" uid="uid://dg068op6rbfob" path="res://demo_test_scene_manager/test_scene_2.gd" id="1_y3mkk"]

[node name="TestScene2" type="Node2D"]
script = ExtResource("1_y3mkk")

[node name="TextureRect" type="ColorRect" parent="."]
offset_right = 1281.0
offset_bottom = 721.0
color = Color(0.4109827, 0.5730941, 0.47753507, 1)

[node name="Label" type="Label" parent="."]
offset_left = 399.0
offset_top = 180.0
offset_right = 884.0
offset_bottom = 363.0
theme_override_font_sizes/font_size = 64
text = "scene2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 200.0
offset_bottom = 188.0

[node name="Button_Main" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Button_Main"

[node name="Button_Scene1" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Button_Scene1"

[node name="Button_PreloadMain" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Button_PreloadMain "

[node name="Label_Info" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
text = "Label_Info"

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 159.0
offset_top = 559.0
offset_right = 1136.0
offset_bottom = 586.0

[connection signal="pressed" from="VBoxContainer/Button_Main" to="." method="_on_main_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Scene1" to="." method="_on_scene1_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_PreloadMain" to="." method="_on_preload_main_pressed"]
